# workload-harness

./: README.md
appworld_a2a_runner/: .gitignore  README.md  example.env  pyproject.toml
appworld_a2a_runner/appworld_a2a_runner/: __init__.py  a2a_client.py  appworld_adapter.py  config.py  otel.py  prompt.py  runner.py
