[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appworld-a2a-runner"
version = "0.1.0"
description = "Standalone AppWorld A2A Proxy Runner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "appworld>=0.1.0",
    "requests>=2.28.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-requests>=0.41b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["appworld_a2a_runner*"]

[project.scripts]
appworld-a2a-runner = "appworld_a2a_runner.runner:main"
